--- a/apps/samba_webdav/docker-compose.yaml
+++ b/apps/samba_webdav/docker-compose.yaml
@@ -2,26 +2,36 @@ version: '3.3'
 
 services:
   webdav:
-    image: derkades/webdav:4.20.2
+    image: derkades/webdav
     container_name: webdavserver
     volumes:
-      - ~/hardisk/data:/data  # Direktori yang sama untuk WebDAV dan Samba
+      - /root/hardisk:/data  # Direktori yang sama untuk WebDAV dan Samba
     ports:
-      - "4444:80"             # Port 4445 di host dipetakan ke port 80 di container
+      - "444:80"             # Port 4445 di host dipetakan ke port 80 di container
     environment:
       - USERNAME=samba          # Username yang sama untuk WebDAV dan Samba
-      - PASSWORD=secret          # Password yang sama untuk WebDAV dan Samba
+      - PASSWORD=1         # Password yang sama untuk WebDAV dan Samba
     restart: unless-stopped
+    networks:
+      - webdav
 
   samba:
     image: dockurr/samba:4.20.2
     container_name: sambaserver
     environment:
       - USER=samba              # Username yang sama untuk WebDAV dan Samba
-      - PASS=secret              # Password yang sama untuk WebDAV dan Samba
+      - PASS=1             # Password yang sama untuk WebDAV dan Samba
      # - RW=true                  # Akses baca-tulis
     ports:
-      - "4445:445"               # Port 4444 di host dipetakan ke port 445 di container
+      - "445:445"               # Port 4444 di host dipetakan ke port 445 di container
     volumes:
       - ~/hardisk/data:/storage  # Direktori yang sama untuk WebDAV dan Samba
     restart: always
+    networks:
+      - samba-net
+
+networks:
+  samba-net:
+    driver: bridge
+  webdav:
+    driver: bridge
